--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,13 +18,13 @@ def getMyVersionCode = { ->
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion(30)
     defaultConfig {
-        applicationId "de.nicidienase.geniesser_app"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode getMyVersionCode()
-        versionName versionString
+        applicationId = "de.nicidienase.geniesser_app"
+        minSdkVersion(21)
+        targetSdkVersion(30)
+        versionCode = getMyVersionCode()
+        versionName = versionString
         manifestPlaceholders = [label: appName]
         javaCompileOptions {
             annotationProcessorOptions {
@@ -32,7 +32,7 @@ android {
                                      "$projectDir/schemas".toString()]
             }
         }
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -40,25 +40,25 @@ android {
         release {
             if (project.hasProperty("gourmetKeyStore") && file(gourmetKeyStore).exists() && file(gourmetKeyStore).isFile()) {
                 println "Release app signing is configured: will sign APK"
-                storeFile file(gourmetKeyStore)
-                storePassword gourmetStorePassword
-                keyAlias gourmetKeyName
-                keyPassword gourmetKeyPassword
+                storeFile = file(gourmetKeyStore)
+                storePassword = gourmetStorePassword
+                keyAlias = gourmetKeyName
+                keyPassword = gourmetKeyPassword
             } else {
-                println "App signing data not found. Will not sign."
+                println("App signing data not found. Will not sign.")
             }
         }
     }
 
     buildTypes {
-        debug {
+        getByName("debug") {
             manifestPlaceholders = [label: appName + "-Debug"]
-            applicationIdSuffix ".debug"
+            applicationIdSuffix = ".debug"
         }
-        release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+        getByName("release") {
+            minifyEnabled = true
+            shrinkResources = true
+            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
             if (project.hasProperty("gourmetKeyStore") && file(gourmetKeyStore).exists() && file(gourmetKeyStore).isFile()) {
                 signingConfig signingConfigs.release
             }
@@ -86,8 +86,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
@@ -95,8 +95,8 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion "1.5.10"
-        kotlinCompilerExtensionVersion "1.0.0-beta08"
+        kotlinCompilerVersion = "1.5.10"
+        kotlinCompilerExtensionVersion = "1.0.0-beta08"
     }
 
     packagingOptions {
@@ -110,86 +110,86 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.kotlin_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    implementation(fileTree(dir: "libs", include: ["*.jar"]))
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.kotlin_version}")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3")
 
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation "androidx.appcompat:appcompat:1.3.0"
-    implementation "androidx.core:core-ktx:1.5.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "com.google.android.material:material:1.4.0-rc01"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation("androidx.constraintlayout:constraintlayout:2.0.4")
+    implementation("androidx.appcompat:appcompat:1.3.0")
+    implementation("androidx.core:core-ktx:1.5.0")
+    implementation("androidx.lifecycle:lifecycle-extensions:2.2.0")
+    implementation("com.google.android.material:material:1.4.0-rc01")
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
+    implementation("androidx.preference:preference-ktx:1.1.1")
+    implementation("com.google.firebase:firebase-analytics:19.0.0")
 
-    implementation "androidx.compose.compiler:compiler:1.0.0-beta08"
-    implementation 'androidx.compose.ui:ui:1.0.0-beta08'
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta08'
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta08'
-    implementation 'androidx.compose.material:material:1.0.0-beta08'
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta08'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta08'
-    implementation 'androidx.activity:activity-compose:1.3.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha06'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta08'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta08'
+    implementation("androidx.compose.compiler:compiler:1.0.0-beta08")
+    implementation("androidx.compose.ui:ui:1.0.0-beta08")
+    implementation("androidx.compose.ui:ui-tooling:1.0.0-beta08")
+    implementation("androidx.compose.foundation:foundation:1.0.0-beta08")
+    implementation("androidx.compose.material:material:1.0.0-beta08")
+    implementation("androidx.compose.material:material-icons-core:1.0.0-beta08")
+    implementation("androidx.compose.material:material-icons-extended:1.0.0-beta08")
+    implementation("androidx.activity:activity-compose:1.3.0-beta01")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha06")
+    implementation("androidx.compose.runtime:runtime-livedata:1.0.0-beta08")
+    implementation("androidx.compose.runtime:runtime-rxjava2:1.0.0-beta08")
 
 
     def room_version = "2.3.0"
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation("androidx.room:room-runtime:$room_version")
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation("androidx.room:room-ktx:$room_version")
 
 //    def nav_version_ktx = "2.3.5"
     def nav_version_ktx = "2.4.0-alpha02"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version_ktx")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version_ktx")
 
     def appCenterSdkVersion = "2.5.1"
-    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
+    implementation("com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}")
+    implementation("com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}")
+    implementation("com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}")
 
 
     def glideVersion = "4.9.0"
-    implementation "com.github.bumptech.glide:glide:${glideVersion}"
+    implementation("com.github.bumptech.glide:glide:${glideVersion}")
     kapt "com.github.bumptech.glide:compiler:${glideVersion}"
 
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
 
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation("com.jakewharton.timber:timber:4.7.1")
 
-    debugImplementation "com.facebook.stetho:stetho:1.5.1"
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.7"
+    debugImplementation("com.facebook.stetho:stetho:1.5.1")
+    debugImplementation("com.squareup.leakcanary:leakcanary-android:2.7")
 
     def hyperionVersion = "0.9.31"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-core:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-attr:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-build-config:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-crash:$hyperionVersion"
-//    debugImplementation "com.willowtreeapps.hyperion:hyperion-sqlite:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-disk:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-geiger-counter:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-measurement:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-phoenix:$hyperionVersion"
-//    debugImplementation "com.willowtreeapps.hyperion:hyperion-recorder:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-shared-preferences:$hyperionVersion"
-    debugImplementation "com.willowtreeapps.hyperion:hyperion-timber:$hyperionVersion"
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-core:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-attr:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-build-config:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-crash:$hyperionVersion")
+//    debugImplementation("com.willowtreeapps.hyperion:hyperion-sqlite:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-disk:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-geiger-counter:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-measurement:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-phoenix:$hyperionVersion")
+//    debugImplementation("com.willowtreeapps.hyperion:hyperion-recorder:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-shared-preferences:$hyperionVersion")
+    debugImplementation("com.willowtreeapps.hyperion:hyperion-timber:$hyperionVersion")
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:5.6.0"
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.6.0")
 
-    testImplementation "org.junit.platform:junit-platform-launcher:1.6.0"
+    testImplementation("org.junit.platform:junit-platform-launcher:1.6.0")
 
     testImplementation("org.assertj:assertj-core:3.11.1")
-    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+    testImplementation("io.mockk:mockk:1.9.3.kotlin12")
 
-    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
-    androidTestImplementation "androidx.test:runner:1.2.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    androidTestImplementation("android.arch.persistence.room:testing:1.1.1")
+    androidTestImplementation("androidx.test:runner:1.2.0")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.2.0")
 }
